# Alice

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  AGENT_CORE.md  ALICE_CALENDAR_DEMO.md  ALICE_ROADMAP.md  ALICE_VOICE_DEMO.md  AMBIENT_MEMORY_B1_FINAL_TEST_RAPPORT.md  API.md  ARCHITECTURE.md  AUTHENTICATION_SECURITY_SUMMARY.md  B2_REQUIREMENTS_ANALYSIS.md  B3_IMPLEMENTATION_PLAN.md  CHANGELOG.md  COMPREHENSIVE_TEST_RESULTS.md  CONTRIBUTING.md  CRITICAL_STATUS_GAPS.md  CURRENT_STATUS.md  CURSOR_VOICE_ADAPTER_INSTRUCTIONS.md  DEPLOYMENT.md  DEPLOYMENT_SETUP_GUIDE.md  DEVELOPMENT.md  Dockerfile.backend  ENTERPRISE_TEST_GUIDE.md  FAS2.md  FRONTEND_MODULARIZATION_PLAN.md  GETTING_STARTED.md  GITHUB_DEFAULT_BRANCH_FIX.md  GUARDIAN_HYSTERESIS_IMPLEMENTATION.md  LICENSE  MODULES.md  MODULE_STATUS.md  Makefile  OPTIMIZATION_PROGRESS.md  PRIOLISTA.md  PROGRESS_TRACKER_README.md  PROJECT_STATUS.md  RAG_ANALYSIS_REPORT.md  (+63 more)
.github/: PULL_REQUEST_TEMPLATE.md  README-badges.md  dependabot.yml  labels.yml
alice-tools/: package.json  tsconfig.json
deploy/: docker-compose.yml
docker/: docker-compose.production.yml  supervisord.conf
docs/: AGENT_README.md  ALICE_CATCHPHRASES.md  ALICE_EMOTIONAL_RESPONSES.md  ALICE_PERSONALITY_OVERVIEW.md  ALICE_SYSTEM_OVERVIEW.md  ALICE_TECHNICAL_PERSONALITY.md  ALICE_VOICE_GUIDELINES.md  ALICE_VOICE_PERSONALITY.md  API_STREAMING_VOICE.md  B2_DOCUMENTATION.md  B3_HARDENING_CHECKLIST.md  BACKUP_RESTORE.md  BRANCH_NOTICE.md  CODE_OF_CONDUCT.md  DEVELOPER_TESTING_GUIDE.md  GIT_WORKFLOW.md  GOOGLE_SETUP.md  PRIVACY_MODEL.md  PROJECT_STATUS.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  STRESSTEST_RESULTAT.md  STT_WHISPER_GUIDE.md  SUPPORT.md  SYSTEM_ANALYSIS_RAPPORT.md  THIRD_PARTY_LICENSES.md  TOKEN_ROTATION.md  TTS_PIPER_GUIDE.md  VOICE_HYBRID_ARCHITECTURE.md  VOICE_SETUP.md
documents/: technical_specs.html
monitoring/: alice_alerts.yml  prometheus.yml
nlu-agent/: package-lock.json  package.json  tsconfig.json
old/: ARCHITECTURE.md  CODEOWNERS  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.frontend  MODULES.md  PRIVACY.md  README_OLD.md  ROADMAP.md  STATUS.md  VISION.md  alice_monitor.py  cleanup_alice.py  progress_requirements.txt  progress_summary.py  progress_tracker.py  simple_monitor.py  smart_cleanup.py  start_alice.sh  watch_alice.sh
old/server/: .env.example  ORIGINAL_HUD_UI.jsx  __init__.py  alice_backup  api_client_manager.py  app.py  asr_integration.py  auth_integration.py  auth_models.py  auth_router.py  b3_barge_in_controller.py  b3_privacy_hooks.py  backup_restore.py  database.py  decision.py  deps.py  error_handlers.py  fast_path_handler.py  google_oauth_router.py  google_oauth_service.py  integration_test_final.py  intent_router.py  llm_coordinator.py  logger_config.py  metrics.py  proactive_router.py  proactive_shadow.py  pyproject.toml  rate_limiter.py  requirements.txt  run.py  security.py  service_health_router.py  soak_test_b3.py  stress_test_integrated.py  stress_test_nlu.py  stress_test_rag.py  think_path_handler.py  transport.ts  tsconfig.json  (+1 more)
old/server/adapters/: llm_gpt_oss.py  tts_dummy.py
old/server/agent/: __init__.py  policy.py
old/server/agent/tools/: __init__.py  router.py
old/server/agents/: __init__.py  bridge.py
old/server/core/: agent_executor.py  agent_orchestrator.py  agent_planner.py  preflight.py  router.py  tool_specs.py
old/server/export/: proactive_report_20250825.md
old/server/llm/: __init__.py  manager.py  openai.py
old/server/services/: __init__.py  voice_gateway.py
old/server/tests/: debug_harmony_tools.py  intent_analyzer.py  verify_tool_surface.py
scripts/: setup-dev-env.sh
server/: .env.example  CALENDAR_SETUP.md  COMMAND_VS_CHAT_RESULTS.md  FINAL_INTEGRATION_TEST_REPORT.md  GMAIL_SETUP.md  LICENSE_COMPLIANCE.md  RAG_IMPROVEMENTS.md  app.py  (+88 more)
(+491 files in other folders)
